# atommap_eval

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
src/atommap_eval/: __init__.py  canonicalizer.py  cli.py  data_models.py  evaluator.py  input_io.py  pair_evaluation.py  parallel.py  preprocess.py  rxn_graph.py  rxnmapper_utils.py
src/atommap_eval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: setup.cfg  test_cli.py  test_evaluator.py  test_parallel.py
