[metadata]
name = atommap-eval
version = 0.1.0
author = Yves Grandjean
author_email = your@email.com
description = Evaluate atom-mapping equivalence of chemical reactions using graph isomorphism
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/your-username/atommap-eval
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    rdkit
    pandas>=1.3
    networkx>=2.8
    rxn-utils
    rxn-chem-utils

[options.extras_require]
dev =
    pytest
    pytest-cov

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    atommap-eval = atommap_eval.cli:main

[tool:pytest]
testpaths = tests
addopts = -v
